[fix] image and menu z-index

--- a/app/assets/stylesheets/app/site-title.css.scss
+++ b/app/assets/stylesheets/app/site-title.css.scss
@@ -28,7 +28,6 @@
 
 .app-header {
   min-height: $app-siteTitleHeight + $app-blockHeight;
-  z-index: 3;
 }
 
 .app-siteTitleTiny {
